# PersonalTgBot

./: .gitignore  README.md  pyproject.toml  settings.conf
src/: main.py
